tests/rosetta/out/Erlang/9-billion-names-of-god-the-integer.error
run: exit status 127
/tmp/9-billion-names-of-god-the-integer.erl:14:75: syntax error before: 'rem'
/tmp/9-billion-names-of-god-the-integer.erl:21:530: syntax error before: 'rem'
escript: There were compilation errors.
